@@ -99,7 +99,10 @@ as a preprocessor for each source file.
 Under Unix, this option does nothing.
 .TP
 .B \-version
-Print version and exit.
+Print version string and exit.
+.TP
+.B \-vnum
+Print short version number and exit.
 .TP
 .BR \-help \ or \ \-\-help
 Display a short usage summary and exit.
