@@ -89,6 +89,9 @@ Other libraries:
 Ocamlbuild:
 - Add support for native dynlink.
 
+All tools:
+- PR#4857: add a -vnum option to display the version number and nothing else
+
 Bug Fixes:
 - PR#4742: finalisation function raising an exception blocks other finalisations
 - PR#4775: compiler crash on crazy types (temporary fix)
